--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# App
+/target
+
 # Compiled class file
 *.class
 
@@ -21,3 +24,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IntelliJ IDEA
+.idea
+*.iws
+*.iml
+*.ipr
+
+# Eclipse
+.project
+.metadata
+.classpath
+.settings
+.loadpath
+.factorypath
