--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
          <artifactId>log4j-core</artifactId>
          <version>2.12.1</version>
       </dependency>
+      <dependency>
+         <groupId>org.testng</groupId>
+         <artifactId>testng</artifactId>
+         <version>7.0.0</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
