--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <java.version>11</java.version>
+      <java.version>1.8</java.version>
       <maven.compiler.source>${java.version}</maven.compiler.source>
       <maven.compiler.target>${java.version}</maven.compiler.target>
       <timestamp>${maven.build.timestamp}</timestamp>
@@ -24,8 +24,9 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
             <configuration>
-               <release>${java.version}</release>
                <showDeprecation>true</showDeprecation>
+               <source>${java.version}</source>
+               <target>${java.version}</target>
             </configuration>
          </plugin>
          <plugin>
@@ -42,22 +43,22 @@
       <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
-         <version>3.9</version>
+         <version>3.11</version>
       </dependency>
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
-         <version>2.13.0</version>
+         <version>2.14.0</version>
       </dependency>
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
-         <version>2.13.0</version>
+         <version>2.14.0</version>
       </dependency>
       <dependency>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
-         <version>7.0.0</version>
+         <version>7.3.0</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
