selenium-test : Added page components and testNgSuite integration with main method

--- a/src/main/resources/main.properties
+++ b/src/main/resources/main.properties
@@ -2,7 +2,7 @@
 # chrome, firefox , edge , safari supported values
 browser.name=chrome
 # Browser version. Chrome 90 is default
-browser.version=90
+browser.version=
 # Platform for automation test run.
 # Desktop, Mobile supported, Desktop is default
 platform=Desktop
