selenium-test : Updated README.md

--- a/src/main/resources/main.properties
+++ b/src/main/resources/main.properties
@@ -5,4 +5,4 @@ browser.name=chrome
 browser.version=
 # Platform for automation test run.
 # Desktop, Mobile supported, Desktop is default
-platform=Desktop
+platform=Mobile
